--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -128,7 +128,7 @@ a {
         top: 0;
         display: flex;
         flex-direction: column;
-        width: 25%;
+        width: 200px;
         background-color: black;
         justify-content: center;
         align-items: center;
@@ -159,12 +159,12 @@ a {
 @media (max-width:800px) {
 
     .h1 {
-        font-size: 33px;
+        font-size: 31px;
         font-weight: bolder;
     }
 
     .lead {
-        font-size: 14px;
+        font-size: 13px;
     }
 
     .logo {
